# my-first-repo

./: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  README.md  package-lock.json  package.json  sonar-project.properties
.github/: CODEOWNERS  dependabot.yml
.kube/: manifest-dev.yml  manifest-prod.yml  manifest-qa.yml  manifest-uson-dev.yml  manifest-uson-prod.yml  manifest-uson-qa.yml
certs/: mule-chain.pem
fake-data/: db.json  routes.json
public/: index.html
python/: .travis.yml  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
python/.github/: ISSUE_TEMPLATE.md
python/docs/: conf.py  index.rst  installation.rst  usage.rst
python/src/python/: __init__.py  cli.py
python/tests/: __init__.py  test_python.py
server/: package.json  server.js
src/: API401.test.tsx  API401Contine.test.tsx  API401Continue.test.tsx  API403.test.tsx  API429.test.tsx  API500.test.tsx  APITimeout.test.tsx  APITimeoutInputLT5GT60.test.tsx  APITimeoutInputSend.test.tsx  APITimeoutSlider.test.tsx  App.css  App.test.tsx  App.tsx  ChangeLanguage.test.tsx  ChangeLanguageToEnglish.test.tsx  ChangeLanguageToFrench.test.tsx  Logout.test.tsx  MaxTokensGT4096.test.tsx  MaxTokensInput.test.tsx  MaxTokensInputSend.test.tsx  MaxTokensLT0.test.tsx  MaxTokensLimit.test.tsx  MaxTokensSlider.test.tsx  Menu.test.tsx  MenuRender.test.tsx  MessageInputRender.test.tsx  PastMessagesInput.test.tsx  PastMessagesInputGT20.test.tsx  PastMessagesInputLT0.test.tsx  PastMessagesInputSend.test.tsx  PastMessagesSlider.test.tsx  PrivateRoute.tsx  ResetChat.test.tsx  (+21 more)
(+177 files in other folders)
