[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python"
version = "0.1.0"
description = "python cookiecutter testing"
readme = "README.rst"
authors = [
  {name = "Betul Kantaroglu", email = "betul.kantaroglu@mckesson.com"}
]
maintainers = [
  {name = "Betul Kantaroglu", email = "betul.kantaroglu@mckesson.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/betulkntrxll/python/issues"
changelog = "https://github.com/betulkntrxll/python/blob/master/changelog.md"
homepage = "https://github.com/betulkntrxll/python"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

